--- a/public/style.css
+++ b/public/style.css
@@ -353,12 +353,20 @@ select.monthly:hover, .yearly:hover{
 }
 
 /* container for graphs */
-.container-graphs {
+.container {
     display: flex;
     flex-direction: column;
     background-color: #FFECF0;
     border: 2px solid black;
     margin-bottom: 20px;
+}
+
+.nonbiomedical-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px;
+    padding: 20px; 
 }
 
 .headline-graphs {
@@ -380,10 +388,18 @@ select.monthly:hover, .yearly:hover{
     color: #333;
 }
 
-.container {
+.biomedical-container {
     display: grid;
     grid-template-rows: repeat(3, 1fr); 
     grid-template-columns: repeat(6, 1fr); 
+    gap: 20px;
+    padding: 20px; 
+}
+
+.nonbiomedical-container{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr); 
     gap: 20px;
     padding: 20px; 
 }
@@ -431,6 +447,21 @@ select.monthly:hover, .yearly:hover{
 .graph6 {
     grid-row: 3 / 4;
     grid-column: 4 / 7;
+}
+
+.graph7 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+.graph8 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+}
+
+.graph9 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3; 
 }
 
 .chart {
