implemented connecting input of nonbiomedical records from tracker to dashboard page displaying graphs but still buggy

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -201,19 +201,19 @@
             <div class="graph7">
                 <p class="reason">Stigma</p>
                 <div class="chart">
-                    <canvas id=""></canvas>
+                    <canvas id="chartStigma"></canvas>
                 </div>
             </div>
             <div class="graph8">
                 <p class="reason">Discrimination</p>
                 <div class="chart">
-                    <canvas id=""></canvas>
+                    <canvas id="chartDiscrimination"></canvas>
                 </div>
             </div>
             <div class="graph9">
                 <p class="reason">Violence</p>
                 <div class="chart">
-                    <canvas id=""></canvas>
+                    <canvas id="chartViolence"></canvas>
                 </div>
             </div>
         </div>
