--- a/public/style.css
+++ b/public/style.css
@@ -361,14 +361,6 @@ select.monthly:hover, .yearly:hover{
     margin-bottom: 20px;
 }
 
-.nonbiomedical-container {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr); 
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 20px;
-    padding: 20px; 
-}
-
 .headline-graphs {
     font-size: 24px;
     font-weight: bold;
@@ -399,7 +391,7 @@ select.monthly:hover, .yearly:hover{
 .nonbiomedical-container{
     display: grid;
     grid-template-rows: repeat(2, 1fr); 
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(6, 1fr); 
     gap: 20px;
     padding: 20px; 
 }
@@ -408,6 +400,11 @@ select.monthly:hover, .yearly:hover{
 .reason{
     font-size: 20px;
     font-weight: 600;
+}
+
+.message{
+    font-size: 16px;
+    margin-top: 20px;
 }
 
 .graph1, .graph2, .graph3, 
@@ -451,17 +448,17 @@ select.monthly:hover, .yearly:hover{
 
 .graph7 {
     grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    grid-column: 1 / 4;
 }
 
 .graph8 {
     grid-row: 1 / 2;
-    grid-column: 2 / 3;
+    grid-column: 4 / 7;
 }
 
 .graph9 {
     grid-row: 2 / 3;
-    grid-column: 1 / 3; 
+    grid-column: 2 / 6; 
 }
 
 .chart {
@@ -473,7 +470,7 @@ select.monthly:hover, .yearly:hover{
 
 .chart canvas {
     width: 100% !important;
-    height: 90% !important;
+    height: 80% !important;
 }
 
 /* statistics */
