restored old file

--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -92,7 +92,7 @@
                 </div>
 
                 <!-- Biomedical fields -->
-                <div class="biomedical-container">
+                <div class="biomedical-container-tracker">
                     <div class="biomedicalfield"> 
                         <label for="location" class="data-label">Location:</label>
                         <label class="radio-option">
@@ -211,7 +211,7 @@
                 </div>
                 
                 <!-- Non-biomedical fields -->
-                <div class="nonbiomedical-container">
+                <div class="nonbiomedical-container-tracker">
                     <div class="nonbiomedicalfield">
                         <label for="stigma" class="data-label">Stigma:</label>
                         <select id="stigma" name="stigma">
