--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -114,7 +114,8 @@
         </div>
 
         <div class="filter">
-            <select class="monthly">
+            <select class="monthly" id="biomedicalMonthly">
+                <option selected hidden>Monthly</option>
                 <option value="1">January</option>
                 <option value="2">February</option>
                 <option value="3">March</option>
@@ -181,7 +182,8 @@
         </div>
 
         <div class="filter">
-            <select class="monthly">
+            <select class="monthly" id="nonbiomedicalMonthly"> 
+                <option selected hidden>Monthly</option>
                 <option value="1">January</option>
                 <option value="2">February</option>
                 <option value="3">March</option>
