--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -129,7 +129,7 @@
                 <option value="11">November</option>
                 <option value="12">December</option>
             </select>
-            <div class="yearly">Yearly</div>
+            <div class="yearly" id="biomedicalYearly">Yearly</div>
         </div>
 
         <div class="biomedical-container">
