--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -129,7 +129,12 @@
                 <option value="11">November</option>
                 <option value="12">December</option>
             </select>
-            <div class="yearly" id="biomedicalYearly">Yearly</div>
+            <select class="yearly" id="biomedicalYearly">
+                <option selected hidden>Yearly</option>
+                {{#each year}}
+                <option value="{{this}}">{{this}}</option>
+                {{/each}}
+            </select>
         </div>
 
         <div class="biomedical-container">
