--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -202,7 +202,12 @@
                 <option value="11">November</option>
                 <option value="12">December</option>
             </select>
-            <div class="yearly">Yearly</div>
+            <select class="yearly">
+                <option selected hidden>Yearly</option>
+                {{#each year}}
+                <option value="{{this}}">{{this}}</option>
+                {{/each}}
+            </select>
         </div>
 
         <div class="nonbiomedical-container">
