--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -202,7 +202,7 @@
                 <option value="11">November</option>
                 <option value="12">December</option>
             </select>
-            <select class="yearly">
+            <select class="yearly" id="nonbiomedicalYearly">
                 <option selected hidden>Yearly</option>
                 {{#each year}}
                 <option value="{{this}}">{{this}}</option>
