--- a/public/style.css
+++ b/public/style.css
@@ -326,7 +326,8 @@
 /* filter */
 .filter{
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    align-items: center;
     padding-right: 20px; 
 }
 
