--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -109,6 +109,7 @@
         <p style="font-size:24px;font-weight:bold;margin-right:5%;margin-left:5%">Filters: </p>
         <select class="monthly" id="monthlyFilter">
             <option selected hidden>Monthly</option>
+            <option value="">None</option>
             <option value="1">January</option>
             <option value="2">February</option>
             <option value="3">March</option>
@@ -124,6 +125,7 @@
         </select>
         <select class="yearly" id="yearlyFilter">
             <option selected hidden>Yearly</option>
+            <option value="">None</option>
             {{#each year}}
             <option value="{{this}}">{{this}}</option>
             {{/each}}
