updated styling for filters in dashboard + added necessary comments for app js file

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -106,7 +106,7 @@
     </div>
 
     <div class="filter">
-        <p style="font-size:24px;font-weight:bold;margin-right:5%;margin-left:5%">Filters: </p>
+        <p>Filter by</p>
         <select class="monthly" id="monthlyFilter">
             <option selected hidden>Monthly</option>
             <option value="">None</option>
@@ -134,7 +134,7 @@
 
     <div class="container">
         <div class="headline-graphs">
-            Biomedical Patient Records Statistcs
+            Biomedical Patient Records Statistics
             <button class="toggle-button" onclick="toggleGraphs(this)">
                 <i class='bx bxs-chevron-up'></i>
             </button>
@@ -183,7 +183,7 @@
 
     <div class="container">
         <div class="headline-graphs">
-            Nonbiomedical Patient Records Statistcs
+            Nonbiomedical Patient Records Statistics
              <button class="toggle-button" onclick="toggleGraphs(this)">
                 <i class='bx bxs-chevron-up'></i>
             </button>
