--- a/public/style.css
+++ b/public/style.css
@@ -326,20 +326,24 @@
 /* filter */
 .filter{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
-    padding-right: 20px; 
+}
+
+.filter p{
+    font-size: 24px;
+    font-weight: bold;
 }
 
 select.monthly, .yearly{
     background-color: white; 
     color: #9B112E;
     border: 3px solid #9B112E; 
-    border-radius: 25px;
-    margin: 10px;
+    border-radius: 18px;
+    margin: 10px 0px 10px 10px;
     padding: 10px;
     position: relative;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
 }
 
