fixed the buggy issue in implementing exporting charts as images and excel sheet

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -133,13 +133,11 @@
             </select>
         </div>
         <div class="export">
-            <button id="exportImagesButton">Export Charts as Images</button>
-            <button id="exportPDFButton">Export Charts as PDF</button>
-            <button id="exportExcelButton">Export Data to Excel</button>
+            <button id="exportImagesButton"><i class="bx bxs-file-image"></i>Export Charts as Images & Excel Sheet</button>
+            <button id="exportPDFButton"><i class="bx bxs-file-pdf"></i>Export Charts as PDF</button>
+            <button id="exportExcelButton"><i class="bx bxs-spreadsheet"></i>Export Data to Excel Sheet</button>
         </div>
     </div>
-
-    
 
     <div class="container">
         <div class="headline-graphs">
