--- a/public/style.css
+++ b/public/style.css
@@ -366,6 +366,12 @@ select.monthly:hover, .yearly:hover{
     padding: 10px;
     margin: 20px 0 20px 20px;
     cursor: pointer;
+    display: flex; 
+    align-items: center; 
+}
+
+.export button i {
+    margin-right: 5px;
 }
 
 .export button:hover{
