--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -141,11 +141,12 @@
                 {{/each}}
             </select>
         </div>
+        {{#if (eq user.role "Data Manager")}}
         <div class="export">
             <button id="exportImagesButton"><i class="bx bxs-file-image"></i>Export Charts as Images & Excel Sheet</button>
             <button id="exportPDFButton"><i class="bx bxs-file-pdf"></i>Export Charts as PDF</button>
-            <button id="exportExcelButton"><i class="bx bxs-spreadsheet"></i>Export Data to Excel Sheet</button>
         </div>
+        {{/if}}
     </div>
 
     <div class="container">
