fixed table label

--- a/views/data.hbs
+++ b/views/data.hbs
@@ -82,7 +82,7 @@
                 <thead>
                     <tr><b>Total:</b> {{biomedicalCount}}</tr>
                     <tr>
-                        <th>Gender</th>
+                        <th>Sex at Birth</th>
                         <th>Location</th>
                         <th>Barangay</th>
                         <th>Remarks</th>
@@ -138,7 +138,7 @@
                 <thead>
                     <tr><b>Total:</b> {{nonBiomedicalCount}}</tr>
                     <tr>
-                        <th>Gender</th>
+                        <th>Sex at Birth</th>
                         <th>Stigma</th>
                         <th>Discrimination</th>
                         <th>Violence</th>
